feat: minIO to save files in storage

--- a/video-uploader-api/video-uploader-api/appsettings.json
+++ b/video-uploader-api/video-uploader-api/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MinIO": {
+    "Bucket": "",
+    "Endpoint": "",
+    "AccessKey": "",
+    "SecretKey": "",
+    "WithSSL":  false
+  }
 }
