--- a/video-uploader-api/video-uploader-api/video-uploader-api.csproj
+++ b/video-uploader-api/video-uploader-api/video-uploader-api.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
+    <PackageReference Include="Minio" Version="6.0.5" />
   </ItemGroup>
 
 </Project>
