--- a/video-uploader-api/video-uploader-api/appsettings.json
+++ b/video-uploader-api/video-uploader-api/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "MinIO": {
-    "Bucket": "",
+    "BucketName": "",
     "Endpoint": "",
     "AccessKey": "",
     "SecretKey": "",
-    "WithSSL":  false
+    "WithSSL": false
   }
 }
