--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "MinIO": {
-    "BucketName": "",
-    "Endpoint": "",
-    "AccessKey": "",
-    "SecretKey": "",
+    "BucketName": "video-uploader",
+    "Endpoint": "127.0.0.1:9000",
+    "AccessKey": "admin",
+    "SecretKey": "admin-password",
     "WithSSL": false
   }
 }
