--- a/.github/workflows/pull-request-pipe.yml
+++ b/.github/workflows/pull-request-pipe.yml
@@ -25,6 +25,9 @@ jobs:
     - name: Setup Docker
       uses: docker/setup-buildx-action@v3
 
+    - name: Change to API directory
+      run: cd API
+
     - name: Restore dependencies
       run: dotnet restore
 
