--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,59 @@
 version: '3.8'
 
 services:
-  video-uploader-api:
-    build:
-      context: .
-      dockerfile: dockerfile
-    container_name: video-uploader-api
-    restart: unless-stopped
-    ports:
-      - "5000:8080" 
-    env_file:
-      - local.env 
-    environment:
-      - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT} 
-      - MinIO__Endpoint=${MINIO_ENDPOINT}
-      - MinIO__AccessKey=${MINIO_ACCESS_KEY}
-      - MinIO__SecretKey=${MINIO_SECRET_KEY}
-      - MinIO__BucketName=${MINIO_BUCKET_NAME}
-      - MinIO__WithSSL=${MINIO_WITH_SSL}
-    depends_on:
-      - video-uploader-minio
-    networks:
-      - video-uploader-net
-
   video-uploader-minio:
     image: quay.io/minio/minio
     container_name: video-uploader-minio
     restart: unless-stopped
     command: server /data --console-address ":9001"
-    env_file:
-      - local.env 
     environment:
-      MINIO_ROOT_USER: ${MINIO_ACCESS_KEY} 
-      MINIO_ROOT_PASSWORD: ${MINIO_SECRET_KEY}
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: admin-password
     ports:
       - "9000:9000" 
       - "9001:9001"
     volumes:
       - video-uploader-minio-data:/data
+    networks:
+      - video-uploader-net
+
+  video-uploader-api-local:
+    profiles: ["local"]
+    build:
+      context: .
+      dockerfile: dockerfile
+    container_name: api-local
+    restart: unless-stopped
+    ports:
+      - "5000:8080" 
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - MinIO__Endpoint=video-uploader-minio:9000  
+      - MinIO__AccessKey=admin
+      - MinIO__SecretKey=admin-password
+      - MinIO__BucketName=uploads
+      - MinIO__WithSSL=false
+    depends_on:
+      - video-uploader-minio
+    networks:
+      - video-uploader-net
+
+  video-uploader-api-docker:
+    profiles: ["docker"]
+    image: luizfelipekohler/video-uploader-api
+    container_name: api-docker
+    restart: unless-stopped
+    ports:
+      - "5001:8080" 
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - MinIO__Endpoint=video-uploader-minio:9000 
+      - MinIO__AccessKey=admin
+      - MinIO__SecretKey=admin-password
+      - MinIO__BucketName=uploads
+      - MinIO__WithSSL=false
+    depends_on:
+      - video-uploader-minio
     networks:
       - video-uploader-net
 
