--- a/.github/workflows/merge-pipe.yml
+++ b/.github/workflows/merge-pipe.yml
@@ -31,6 +31,6 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v6
         with:
-          context: .
+          context: ./API
           push: true
           tags: luizfelipekohler/video-uploader-api
