--- a/API/Tests/Tests.Integration/Tests.Integration.csproj
+++ b/API/Tests/Tests.Integration/Tests.Integration.csproj
@@ -8,18 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Bogus" Version="35.6.3" />
+    <PackageReference Include="Bogus" Version="35.6.4" />
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
-    <PackageReference Include="FluentAssertions" Version="8.6.0" />
+    <PackageReference Include="FluentAssertions" Version="8.7.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="Testcontainers" Version="4.7.0" />
     <PackageReference Include="Testcontainers.Minio" Version="4.7.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\API\API.csproj" />
+    <ProjectReference Include="..\..\Presentation\Presentation.csproj" />
   </ItemGroup>
 
   <ItemGroup>
