--- a/.github/workflows/api/merge-pipe.yml
+++ b/.github/workflows/api/merge-pipe.yml
@@ -3,10 +3,12 @@ name: Merge Pipeline
 on:
   push:
     branches: [ "main" ]
+    paths: ['API/**']
+
 
 jobs:
   build-and-test:
-    uses: ./.github/workflows/build-and-test-job.yml
+    uses: ./.github/workflows/api/build-and-test-job.yml
 
   built-and-publish:
     runs-on: ubuntu-latest
