pr pipe test part. 3

--- a/.github/workflows/api/pull-request-pipe.yml
+++ b/.github/workflows/api/pull-request-pipe.yml
@@ -3,7 +3,7 @@ name: Pull Request Pipeline
 on:
   pull_request:
     branches: [ "main" ]
-    paths: ['API/**']
+    # paths: ['API/**']
 
 jobs:
   # build-and-test:
