--- a/.github/workflows/front-merge-pipe.yml
+++ b/.github/workflows/front-merge-pipe.yml
@@ -6,8 +6,8 @@ on:
     paths: ['web/**']
 
 jobs:
-  build-and-test:
-    name: Build and Test
+  build:
+    name: Build
     runs-on: ubuntu-latest
     
     defaults:
@@ -34,10 +34,10 @@ jobs:
     - name: Build project
       run: npm run build
 
-  build-and-publish:
-    name: Build and Publish Docker Image
+  publish:
+    name: Publish Docker Image
     runs-on: ubuntu-latest
-    needs: build-and-test
+    needs: build
     steps:
       - name: Checkout
         uses: actions/checkout@v4
