--- a/.github/workflows/front-pull-request-pipe.yml
+++ b/.github/workflows/front-pull-request-pipe.yml
@@ -6,4 +6,30 @@ on:
     paths: ['web/**']
 
 jobs:
-
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: ./web
+        
+    steps:
+    - name: heckout code
+      uses: actions/checkout@v4
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18.x'
+        cache: 'npm'
+        cache-dependency-path: './web/package-lock.json'
+    
+    - name: Install dependencies
+      run: npm ci
+    
+    - name: TypeScript type check
+      run: npx tsc --noEmit
+    
+    - name: Build project
+      run: npm run build
