--- a/API/Presentation/appsettings.json
+++ b/API/Presentation/appsettings.json
@@ -10,7 +10,6 @@
     "BucketName": "video-uploader",
     "Endpoint": "127.0.0.1:9000",
     "AccessKey": "admin",
-    "SecretKey": "admin-password",
-    "WithSSL": false
+    "SecretKey": "admin-password"
   }
 }
