--- a/API/Tests/Tests.Unit/Tests.Unit.csproj
+++ b/API/Tests/Tests.Unit/Tests.Unit.csproj
@@ -18,7 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\..\Infra\Infra.csproj" />
     <ProjectReference Include="..\..\Presentation\Presentation.csproj" />
+    <ProjectReference Include="..\..\Service\Service.csproj" />
   </ItemGroup>
 
   <ItemGroup>
