updating name of project from 'api' to 'video-uploader-api'

--- a/.github/workflows/video-uploader-api-build-and-test-job.yml
+++ b/.github/workflows/video-uploader-api-build-and-test-job.yml
@@ -27,19 +27,19 @@ jobs:
 
       - name: Restore dependencies
         run: dotnet restore
-        working-directory: ./API
+        working-directory: ./video-uploader-api
 
       - name: Build the solution
         run: dotnet build --configuration Release --no-restore
-        working-directory: ./API
+        working-directory: ./video-uploader-api
 
       - name: Run unit tests
         run: dotnet test --filter "Category=Unit"
-        working-directory: ./API
+        working-directory: ./video-uploader-api
 
       - name: Run integration tests
         run: dotnet test --filter "Category=Integration"
-        working-directory: ./API
+        working-directory: ./video-uploader-api
 
       - name: Set output
         id: set-output
